2005-06-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* fr/about/features.html: new file. (Gauvain Pocentek).

	* fr/about/thanks.html: new file. (Gauvain Pocentek)

2005-06-19  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* site/fr/index.html: Updates.

2005-06-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/menu-entries.py: remove .html from index

	* site/install/devel.ihtml: update macos.

2005-06-17  John Mandereau  <john.mandereau@free.fr>

	* fr/: update translations.

2005-06-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/images/baer-flat-gray.png (Module): gray scale scans.

	* site/images/directions-updown.png (Module): update.

	* site/images/directions-page1.png (Module): remove.

	* site/images/directions.ly: update to 2.5.25

	* site/switch/index.html: use double lily image.

	* fr/switch/howto.html: remove @LANG@

	* site/switch/advantages.html: add screenshot of Mac version.

	* site/images/screenshot-macos.png (Module): new image.

	* site/images/double-lily.png (Module): new image.

	* site/about/thanks.html (href): add Krista Scott

	* site/images/macosx-logo.png (Module): use MacOS logo from
	apple.com

	* site/install/index.html (href): remove mandrake 9 note.
	(href): acknowledge trademarks.

	* site/images/windows-logo.png (Module): remove background, then
	scale.

	* site/images/windows.png (Module): remove.

2005-06-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Fix autopackage links.

	* po/nl.po: s/spoedcursus/stoomcursus/.

	* TRANSLATION (LANG): Add install/index.html as 1st delivery.  Add
	note about .itml.

2005-06-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/images/shortcut.png: Use miniscuul.png.  Why is this called
	shortcut?

	* site/install, site/images: Update/uniformise logos a bit.  Add
	autopackage.

	* po/fr.po: Bugfix.

2005-06-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* po/fr.po: patch by John Mandereau.

	* site/news.ihtml (Preferably): annonce de la Traduction
	Francaise. (Thanks John!)