@@ -80,7 +80,7 @@
   <li>Clusters et signes de groupements rythmiques.</li>
   <li>Tremolos, sur notes et accords.</li>
   <li>&ldquo;Tuplets&rdquo; (duolet, triolet, nolet, etc) de toutes sortes.</li>
-  <li>Notation polym&eacute;trique (mesures irréguli&egrave;res).</li>
+  <li>Notation polym&eacute;trique (mesures irr&eacute;guli&egrave;res).</li>
   <li>Notation mensurale.</li>
   <li>R&eacute;pliques automatiques.</li>
   <li>Cr&eacute;ation automatique d'un conducteur d'orchestre.</li>
