@@ -1,0 +1,110 @@
+<!--
+    Translation of CVS Revision: 1.35
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+<h1>Installer LilyPond</h1>
+
+<p>
+  Si nous avons aiguis&eacute; votre app&eacute;tit concernant LilyPond, vous &ecirc;tes sur
+  la bonne page. Cliquez sur le lien de t&eacute;l&eacute;chargement concernant votre
+  plateforme, et rendez vous sur <a href="getting-started.html">cette page</a> pour
+  d&eacute;buter.
+</p>
+
+
+<h2>T&eacute;l&eacute;charger LilyPond 2.4 -- version stable</h2>
+
+
+<strong>Note</strong> <a name="ec-fonts"></a>
+LilyPond 2.4 n&eacute;cessite le paquet <tt>ec-fonts-mftraced</tt> t&eacute;l&eacute;chargeable
+<a href="http://lilypond.org/download/fonts/">ici</a>
+
+<a name="2.4"></a>
+<table width="100%" border="0" rules="rows" cellpadding="3">
+  
+  <!-- use this as template for new entry !-->
+  <tr>
+    <th></th>
+    <th>Plateforme</th>
+    <th>Version</th>
+    <th>Aller ici</th>
+    <th>Version de LilyPond</th>
+    <th>Packager</th>
+  </tr>
+
+  @stable.ihtml@
+
+</table>
+
+<h2>T&eacute;l&eacute;charger LilyPond 2.5 -- version de d&eacute;veloppement</h2>
+
+<strong>Note</strong> <a name="gs815"></a>
+LilyPond 2.5 n&eacute;cessite la version 8.15 ou plus r&eacute;cente de <a
+href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
+
+<a name="2.5"></a>
+<table width="100%" border="0" rules="rows" cellpadding="3">
+    
+  <!-- use this as template for new entry !-->
+  <tr>
+    <th></th>
+    <th>Plateforme</th>
+    <th>Version</th>
+    <th>Aller ici</th>
+    <th>Version de LilyPond</th>
+    <th>Packager</th>
+  </tr>
+
+  @devel.ihtml@
+
+</table>
+
+
+<h2>T&eacute;l&eacute;charger LilyPond 2.2 -- ancienne version</h2>
+
+<a name="2.2"></a>
+<table width="100%" border="0" rules="rows" cellpadding="3">
+  
+  <!-- use this as template for new entry !-->
+  <tr>
+    <th></th>
+    <th>Plateforme</th>
+    <th>Version</th>
+    <th>Aller ici</th>
+    <th>Version de LilyPond</th>
+    <th>Packager</th>
+  </tr>
+
+  @old.ihtml@
+
+</table>
+
+
+<p>
+  Si votre plateforme n'est pas list&eacute;e vous pouvez nous aider en
+  <a href="../devel/packaging.html">r&eacute;alisant des paquetages LilyPond</a>.
+</p>
+
+<p>
+  Si vous estimez que LilyPond &eacute;volue trop vite, essayez une des
+  <a href="older-versions.html">plus anciennes versions</a>.
+</p>
+
+
+<h2>Notes</h2>
+
+<a name="redhat-notes"></a>
+<a name="mandrake-notes"></a>
+
+Tous les logos et images de produits sont les marques d&eacute;pos&eacute;es de leurs ayant-droits respectifs.
+
+<p>
+  <i>
+    <p align=right>Derni&egrave;re modification $Date$</p>
+  </i>
+</p>
