@@ -1,3 +1,9 @@
+2005-06-22  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/about/features: update
+	
+	* fr/install/index.html: new file
+
 2005-06-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* fr/about/features.html: new file. (Gauvain Pocentek).
